--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   "homepage": "https://github.com/Augustwuli/market-backend#readme",
   "dependencies": {
     "env2": "^2.2.2",
-    "hapi": "^16.7.0"
+    "hapi": "^16.7.0",
+    "hapi-swagger": "^7.10.0",
+    "inert": "^4.2.1",
+    "joi": "^13.7.0",
+    "package": "^1.0.1",
+    "vision": "^4.1.1"
   }
 }
