--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "joi": "^13.7.0",
     "package": "^1.0.1",
     "vision": "^4.1.1"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^5.4.0"
   }
 }
